<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/secondview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/goon_ipad_sign_in_bg_pass"
            android:gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/fillemailforlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:hint="@string/email"
                android:text="note@test.com"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/fillpasswordforlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:hint="@string/password"
                android:text="12345678"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/loginwithacc"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/btn_signin" />
    </LinearLayout>

</LinearLayout>