<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#0090d3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/titlebarnewborn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/diary"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pinposspace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlebar"
        android:background="#00aeef" >

        <RelativeLayout
            android:id="@+id/pinpos1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/pin1"
                android:layout_width="14dp"
                android:layout_height="25dp"
                android:src="@drawable/goon_ipad_calendar_point01" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ProgressSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pinposspace"
        android:background="#00aeef"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/showProgressLayout1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/showProgress1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="150\nDays"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="0.41"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/frame1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#464646"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/progressbar"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:background="#94dc2d"
                        android:orientation="vertical" >
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/showFullProgressLayout1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/fulldays1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="280\nDays"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/showProgressLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="6dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/wombage1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="●  Womb Age 130 days"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

    <!-- calendar space -->

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ProgressSpace"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="left" >

                <ImageView
                    android:id="@+id/prevMonth"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/goon_ipad_calendar_bt_arow_l" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <!--
                <Spinner
                    android:id="@+id/choosecalendarmonth"
                    android:layout_width="212dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />
                -->

                <TextView
                    android:id="@+id/monthchoosed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="September"
                    android:textColor="#00aeef"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="right" >

                <ImageView
                    android:id="@+id/nextMonth"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:src="@drawable/goon_ipad_calendar_bt_arow_r" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/calendarheader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tableLayout1"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sun"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mon"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/t"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tue"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/w"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/wed"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/th"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/thurs"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/f"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fri"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sat"
                android:textSize="20dp" />
        </TableRow>

        <ImageView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:src="@drawable/greyline" />
    </TableLayout>

    <GridView
        android:id="@+id/calendar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/calendarheader"
        android:numColumns="7" >
    </GridView>

</RelativeLayout>