<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_title"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/showmonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/edit_profile"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/btn_cancel"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/mark"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="*"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/fillchildname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Child&apos;s name" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_info_fillchildage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/mark2"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="*"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/fillchildage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="0.86"
            android:ems="10"
            android:hint="Child&apos;s womb Age" />

        <TextView
            android:id="@+id/days"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/day"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/filldadname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="Father&apos;s name" >
    </EditText>

    <EditText
        android:id="@+id/fillmomname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="Mother&apos;s name" />

    <LinearLayout
        android:id="@+id/layout_info_gender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <RelativeLayout
            android:id="@+id/layout_info_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/img_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/goon_ipad_new_born_icon_man" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_info_woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/img_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/goon_ipad_new_born_icon_woman" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/info_submit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@color/bg_title"
            android:text="@string/btn_send"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/info_clear"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/bg_title"
            android:text="@string/btn_clear"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>